[package]
name = "ds210final"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
color-eyre = "0.6"
ndarray = "0.15.6"
ndarray-csv = "0.5.1"
linfa = "0.6.1"
linfa-clustering = "0.6.1"
rand = "0.8.5"
plotters = "0.3.4"